# InsightBoard-Pro

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  state.py
app/analytics/: __init__.py  forecast.py  outliers.py  recommender.py  stats.py
app/charts/: __init__.py  factory.py
app/components/: __init__.py  chart_card.py  data_table.py  export_center.py  filter_panel.py  kpi_card.py  settings_panel.py  sidebar.py  snackbar.py  theme_switcher.py  upload_dialog.py
app/database/: __init__.py  db.py  models.py  repositories.py
app/pages/: __init__.py  _common.py  charts.py  dashboard.py  filters.py  history.py  home.py  preview.py  reports.py  settings.py  upload.py
app/services/: __init__.py  ai_query.py  data_cleaner.py  exporter.py  file_loader.py  filters.py  insights.py  pivot.py
app/ui/: __init__.py  layout.py  router.py  theme.py
app/utils/: __init__.py  encoding.py  formatters.py  logger.py  validators.py
data/samples/: generate_sample.py  sample_sales.csv
docs/: BUILD.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
tests/: conftest.py  test_ai_query.py  test_charts.py  test_data_cleaner.py  test_database.py  test_exporter.py  test_file_loader.py  test_filters.py  test_forecast.py  test_insights.py  test_outliers.py  test_pivot.py  test_recommender.py  test_state.py  test_stats.py  test_validators.py
